--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,10 @@ httpcore==0.15.0
 httpx==0.23.0
 idna==3.4
 outcome==1.2.0
+packaging==21.3
+pyparsing==3.0.9
 PySocks==1.7.1
+python-dotenv==0.21.0
 pytz==2022.5
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
@@ -23,9 +26,11 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 tornado==6.2
+tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
 tzdata==2022.5
 tzlocal==4.2
 urllib3==1.26.12
+webdriver-manager==3.8.4
 wsproto==1.2.0
