--- a/.github/workflows/post_everyday_poem.yml
+++ b/.github/workflows/post_everyday_poem.yml
@@ -1,9 +1,9 @@
 name: Post Everyday Poem
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   build:
