--- a/.github/workflows/post_everyday_poem.yml
+++ b/.github/workflows/post_everyday_poem.yml
@@ -2,8 +2,8 @@ name: Post Everyday Poem
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+#  schedule:
+#    - cron: "0 0 * * *"
 
 jobs:
   build:
@@ -48,5 +48,6 @@ jobs:
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.G_T }}
-          branch: ${{ github.head_ref }}
+          branch: main
+          message: ':speech_balloon: chore: autopublish ${date}'
           force: true
