:construction_worker: Update Github Action config.
Signed-off-by: InzamZ <me@inzamz.top>

--- a/.github/workflows/post_everyday_poem.yml
+++ b/.github/workflows/post_everyday_poem.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           github_token: ${{ secrets.G_T }}
           branch: main
-          message: ':speech_balloon: chore: autopublish ${timestamp}'
+          message: ':speech_balloon: chore: autopublish ${{ timestamp }}'
           force: true
